--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.16.7",
+    "@popperjs/core": "^2.11.6",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^5.1.3",
+    "jquery": "^3.6.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "5",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
