--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,13 +6,13 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
-Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
+# Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 amazon:
   service: S3
-  access_key_id: <%= Rails.application.credentials.aws[:access_key_id] %>
-  secret_access_key: <%= Rails.application.credentials.aws[:secret_access_key] %>
+  access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
+  secret_access_key: <%= ENV['AWS_S3_SECRET_ACCESS_KEY'] %>
   region: us-east-1
-  bucket: <%= Rails.application.credentials.aws[:bucket] %>
+  bucket: <%= ENV['PHOTO_UPLOAD_BUCKET'] %>
 
 # amazon: 
 #   service: S3 
