--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "5",
+    "serve": "^14.1.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
