--- a/config/storage.yml
+++ b/config/storage.yml
@@ -10,7 +10,7 @@ local:
 
 amazon: 
   service: S3 
-  access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %> 
+  access_key_id: <%= ENV['AWS_S3_ACCESS_KEY_ID'] %> 
   secret_access_key: <%= ENV['AWS_S3_SECRET_ACCESS_KEY'] %> 
   region: "us-east-1" 
   bucket: <%= ENV['PHOTO_UPLOAD_BUCKET'] %>
